# 49

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  PRIVACY.md  README-HF-SPACE.md  README.md  SECURITY.md  TERMS.md  app.py  docker-compose.yml  package.json  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/static/: app.js  style.css
app/templates/: index.html
docs/: dashboard-runbook.md  ip-portfolio-due-diligence.md  overworker-mvp-spec.md  overworker-product-brief.md  production-sale-checklist.md  valuation-upgrade-to-100k.md
docs/proof/: before-after-example.md  case-study-01-own-portfolio.md  sample-overwork-score.json  sample-report.md  sample-verification-report.md
docs/proof/screenshots/: README.md
docs/research/: blockchain-density-of-liquid-value.md
docs/sales/: discovery-call-script.md  offer.md  proposal-template.md
docs/technical/: github-ingestion-spec.md
scripts/: run_demo.py  score_project.py
src/overworker/: __init__.py  chat_archive_parser.py  cli.py  config.py  github_ingest.py  ingest.py  llm.py  models.py  repo_scanner.py  worker_router.py
src/overworker/export/: markdown_exporter.py  zip_exporter.py
src/overworker/research/: liquid_value_density.py
src/overworker/scoring/: __init__.py  overwork_score.py
src/overworker/verification/: __init__.py  claim_checker.py  firewall.py  (+1 more)
tests/: test_claim_checker.py  test_github_ingest.py  test_liquid_value_density.py  test_overwork_score.py  test_secret_scanner.py  test_verification_firewall.py  test_worker_router.py
(+8 files in other folders)
