[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overworker"
version = "0.1.0"
description = "AI work-execution scaffold for converting fragmented technical projects into verified deliverable packages."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Joseph Skrobynets"}]
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.scripts]
overworker = "overworker.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
